--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = godot-cpp
 	url = https://github.com/godotengine/godot-cpp.git
 	branch = master
+	
+[submodule "game-music-emu"]
+	path = game-music-emu
+	url = https://github.com/libgme/game-music-emu
