--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -107,7 +107,8 @@
         "compare": "cpp",
         "format": "cpp",
         "cfenv": "cpp",
-        "csignal": "cpp"
+        "csignal": "cpp",
+        "variant": "cpp"
     },
     "files.exclude": {
         "**/*.tmp": true,
