gme porting no compile problems

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -108,7 +108,8 @@
         "format": "cpp",
         "cfenv": "cpp",
         "csignal": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "wave_writer.h": "c"
     },
     "files.exclude": {
         "**/*.tmp": true,
