--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,11 +8,11 @@
 			"name": "Run Demo [FROM EDITOR] - [DEBUG MODE]",
 			"type": "lldb",
 			"request": "launch",
-			"program": "/Applications/Godot.app/Contents/MacOS/Godot",
+			"program": "/Users/Da/Documents/GitHub/godot/bin/godot.macos.editor.dev.arm64",
 			"args": [
 				"--editor",
 				"--path",
-				"${workspaceFolder}/project",
+				"${workspaceFolder}/game",
 				"--verbose",
 				"--debug",
 				"--stdout"
@@ -21,15 +21,16 @@
 			"cwd": "${workspaceFolder}",
 			"environment": [],
 			"console": "internalConsole",
+			"preLaunchTask": "build-extension [dev build]"
 		},
         {
 			"name": "Run Demo [FROM GAME] - [DEBUG MODE]",
 			"type": "lldb",
 			"request": "launch",
-			"program": "/Applications/Godot.app/Contents/MacOS/Godot",
+			"program": "/Users/Da/Documents/GitHub/godot/bin/godot.macos.editor.dev.arm64",
 			"args": [
 				"--path",
-				"${workspaceFolder}/project",
+				"${workspaceFolder}/game",
 				"--verbose",
 				"--debug",
 				"--stdout"
@@ -43,11 +44,11 @@
 			"name": "Run Demo [FROM EDITOR] - [TEST MODE]",
 			"type": "lldb",
 			"request": "launch",
-			"program": "/Applications/Godot.app/Contents/MacOS/Godot",
+			"program": "/Users/Da/Documents/GitHub/godot/bin/godot.macos.editor.dev.arm64",
 			"args": [
 				"--editor",
 				"--path",
-				"${workspaceFolder}/project",
+				"${workspaceFolder}/game",
 			],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}",
@@ -58,10 +59,10 @@
 			"name": "Run Demo [FROM GAME] - [TEST MODE]",
 			"type": "lldb",
 			"request": "launch",
-			"program": "/Applications/Godot.app/Contents/MacOS/Godot",
+			"program": "/Users/Da/Documents/GitHub/godot/bin/godot.macos.editor.dev.arm64",
 			"args": [
 				"--path",
-				"${workspaceFolder}/project",
+				"${workspaceFolder}/game",
 			],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}",
