--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -122,4 +122,9 @@ jobs:
           scons target='${{ matrix.target }}' platform='${{ matrix.platform }}' arch='${{ matrix.arch }}' -j2
           ls -l game/bin/
 
-
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ github.event.repository.name }}
+          path: |
+            ${{ github.workspace }}/game/bin/
